# PyronyModManager

./: .gitignore  README.md  app.py  pmm_clausewitz.py  pmm_games.py  pmm_launcher.py  pmm_models.py  pmm_parser.py  pmm_services.py  pmm_storage.py  pmm_updater.py  pmm_watcher.py  pyproject.toml
pmm/: __init__.py
pmm/core/: __init__.py  clausewitz.py  games.py  launcher.py  models.py  parser.py  playset_io.py  services.py  storage.py  updater.py
pmm/ui/: __init__.py  collection_dialogs.py  conflict_view.py  main_window.py  mod_list.py  settings_dialog.py
pmm_ui/: collection_dialogs.py  conflict_view.py  main_window.py  mod_list.py  settings_dialog.py  update_banner.py
