[project]
name = "PyronyModManager"
version = "0.2.0"
requires-python = ">=3.14"
dependencies = [
    "PySide6>=6.10.1", # Python 3.14 support; LGPL
    "msgspec", # fast JSON serialization for storage
    "httpx",            # HTTP client for update checker
    "watchfiles", # hot-reload mod directory
]

[project.scripts]
pyirony = "app:main"
